fixed contact and footer spacing problem

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -3,11 +3,18 @@
 	linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%),
 	url(./imageOfComputer.jpg);
 	background-repeat: no-repeat;
-	background-size: cover; 
+	background-size: cover;
     }
 
-#contactForm{
-	max-width: 70%;
-	margin: auto;
+#formContainer{
 	margin-bottom: 50px;
+	
+	#contactForm{
+		max-width: 80%;
+		margin: auto;
+	}
 } 
+
+#messageArea{
+	min-height: 20vh;
+}
