--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,4 +1,4 @@
-.Footer{
-	height: 50px;
+Footer{
+	 min-height: auto;
       }
       
