--- a/src/Components/Projects/ProjectSection.css
+++ b/src/Components/Projects/ProjectSection.css
@@ -1,9 +1,1 @@
-card {
-  background-color: aqua;
-  min-width: 1000px;
-}
-
-Button {
-  margin: auto;
-}
-/*# sourceMappingURL=ProjectSection.css.map */
+/* No CSS *//*# sourceMappingURL=ProjectSection.css.map */
